# 3d-engine

./: .gitignore  CMakeLists.txt  README.md
engine/include/aurora/: EditorLayer.h  Engine.h  Layer.h  LayerStack.h  Logger.h  Math.h
engine/src/: EditorLayer.cpp  Engine.cpp  LayerStack.cpp
samples/MinimalGame/: main.cpp
src/: App.cpp  App.h  main.cpp
src/render/: Mesh.cpp  Mesh.h
src/shaders/: triangle.frag  triangle.vert
src/vulkan/: BufferUtils.cpp  BufferUtils.h  Device.cpp  Device.h  Instance.cpp  Instance.h  Renderer.cpp  Renderer.h  Swapchain.cpp  Swapchain.h  Utils.cpp  Utils.h  VkObjects.h
src/window/: Window.cpp  Window.h
